// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact notes and editing is set to true button message changes to DONE 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={65}
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Flex
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    value={1}
  >
    <Input
      autoCorrect={true}
      autoGrow={false}
      blurOnSubmit={false}
      editable={true}
      multiline={true}
      onChangeText={[Function]}
      style={
        Object {
          "borderBottomWidth": 0,
          "color": "#505256",
          "fontSize": 16,
          "marginTop": 30,
          "paddingBottom": 30,
          "paddingHorizontal": 36,
          "textAlign": "left",
        }
      }
    />
  </Flex>
  <Flex
    justify="end"
  >
    <Button
      onPress={[Function]}
      text="DONE"
      type="secondary"
    />
  </Flex>
</KeyboardAvoidingView>
`;

exports[`contact notes icon and prompt are shown if no notes 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={65}
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <NullStateComponent
    descriptionText="Remember important details about Roger, like favorite food, hobbies they love or something interesting they said."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <Flex
    justify="end"
  >
    <Button
      onPress={[Function]}
      text="ADD PRIVATE NOTES"
      type="secondary"
    />
  </Flex>
</KeyboardAvoidingView>
`;

exports[`contact notes notes are shown 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={65}
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Flex
    style={
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    value={1}
  >
    <ScrollView>
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "borderBottomWidth": 0,
            "color": "#505256",
            "fontSize": 16,
            "marginTop": 30,
            "paddingBottom": 30,
            "paddingHorizontal": 36,
            "textAlign": "left",
          }
        }
      >
        Hello, Roge! Here are some notes.
      </MyText>
    </ScrollView>
  </Flex>
  <Flex
    justify="end"
  >
    <Button
      onPress={[Function]}
      text="EDIT PRIVATE NOTES"
      type="secondary"
    />
  </Flex>
</KeyboardAvoidingView>
`;
